--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.3.4",
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-sharp": "^2.5.6",
+    "gatsby-plugin-snipcart": "^1.1.2",
+    "gatsby-remark-images": "^3.3.0",
+    "gatsby-source-contentful": "^2.3.1",
     "gatsby-source-filesystem": "^2.2.4",
+    "gatsby-transformer-remark": "^2.8.3",
     "gatsby-transformer-sharp": "^2.4.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
